<resources>
    <!-- General strings -->
    <string name="app_name">KfarYarok</string>
    <string name="debug_string" translatable="false">placeholder</string>

    <!-- Activity strings -->
    <string name="act_update_details">עדכון</string>
    <string name="act_settings">הגדרות</string>
    <string name="act_firstlaunch">הגדרות ראשוניות</string>

    <!-- Alert strings -->
    <string name="alert_updates_title">עדכונים חדשים</string>
    <string name="notif_channel_name">הכפר הירוק</string>
    <string name="notif_channel_desc">התראות עדכונים יומיים</string>

    <!-- Dialog strings -->
    <string name="dialog_pref_class_title">בחר כיתה</string>

    <!-- View strings -->
    <string name="global_update">עדכון כללי</string>
    <string name="btn_devmode_easteregg">dev off</string>
    <string name="cb_firstlaunch_alerts">הפעל התראות</string>
    <string name="btn_firstlaunch_timepicker">שעת התראה</string>
    <string name="cb_firstlaunch_globalalerts">התריע על עדכונים כלליים</string>
    <string name="tv_main_warning_outdated">ייתכן שהמידע לא מעודכן!</string>

    <!-- Toast strings -->
    <string name="toast_invalid_class">כיתה לא תקינה</string>
    <string name="toast_firstlaunch_no_class">בחר כיתה</string>
    <string name="toast_devmode_enabled">מצב מפתח הופעל</string>
    <string name="toast_devmode_disabled">מצב מפתח בוטל</string>
    <string name="toast_devmode_clicks_remaining"> לחיצות נותרו</string>
    <string name="toast_devmode_invalid_server">קישור לא תקין</string>
    <string name="toast_devmode_defaultserver_revert">מחזיר לשרת עדכון רגיל</string>
    <string name="toast_devmode_forcefetch">עדכונים חדשים הורדו בהצלחה</string>
    <string name="toast_card_copiedtext">טקסט הועתק</string>
    <string name="toast_load_nocache_nointernet">התחברות לשרת נכשלה ואין עדכונים שמורים, התחבר לאינטרנט</string>
    <string name="toast_load_defaultserver_revert">כישלון בעיבוד נתונים, מחזיר לשרת עדכון רגיל</string>
    <string name="toast_load_nointernet_usingcache">התחברות לשרת נכשלה, מציג את העדכונים האחרונים שהורדו</string>
    <string name="toast_load_failure">כישלון בעיבוד נתונים</string>

    <!-- Menu strings -->
    <string name="menu_settings">הגדרות</string>
    <string name="menu_advanced">מצב מתקדם</string>
    <string name="menu_about">אודות</string>
    <string name="menu_card_copytext">העתק עדכון</string>

    <!-- Preference text strings -->
    <string name="settings_alertcategory_title">התראות</string>
    <string name="settings_alertcategory_enabled">פעיל</string>
    <string name="settings_advancedcategory_title">הגדרות מתקדמות</string>
    <string name="settings_advancedcategory_server">שרת עדכון</string>
    <string name="settings_advancedcategory_forcefetch">כפה הורדת עדכונים מחדש</string>
    <string name="settings_advancedcategory_reset">אפס הגדרות</string>
    <string name="settings_advancedcategory_reset_summary">מיד לאחר לחיצה על הכפתור, כל ההגדרות ימחקו!</string>
    <string name="settings_class">כיתה</string>

    <!-- Preference key strings -->
    <string name="pref_class_string" translatable="false">class</string>
    <string name="pref_updateserver_string" translatable="false">update_server</string>
    <string name="pref_forcefetch">force_fetch</string>
    <string name="pref_alerts_enabled_bool" translatable="false">alerts_enabled</string>
    <string name="pref_globalalerts_enabled_bool" translatable="false">global_alerts_enabled</string>
    <string name="pref_launched_before_bool" translatable="false">launched_before</string>
    <string name="pref_advanced_mode_bool" translatable="false">advanced_mode</string>
    <!-- reset key containing "on_next_launch" is a leftover from previous versions,
     and because it's a preference key, it will not be changed-->
    <string name="pref_reset_bool" translatable="false">reset_on_next_launch</string>
    <string name="pref_alerts_time_string" translatable="false">alerts_time</string>
    <string name="settings_alerts_category" translatable="false">settings_alerts_category</string>
    <string name="settings_advanced_category" translatable="false">settings_advanced_category</string>

    <!-- Preference default value strings -->
    <string name="pref_class_string_def" translatable="false" /> <!-- def is no class -->
    <string name="pref_updateserver_string_def" translatable="false" />
    <string name="pref_alerts_enabled_bool_def" translatable="false">true</string>
    <string name="pref_globalalerts_enabled_bool_def" translatable="false">true</string>
    <string name="pref_launched_before_bool_def" translatable="false">false</string>
    <string name="pref_advanced_mode_bool_def" translatable="false">false</string>
    <string name="pref_reset_bool_def" translatable="false">false</string>
    <string name="pref_alerts_time_string_def" translatable="false">7:25</string>

    <!-- Grade strings -->
    <string name="grade_g">ז</string>
    <string name="grade_h">ח</string>
    <string name="grade_i">ט</string>
    <string name="grade_j">י</string>
    <string name="grade_k">יא</string>
    <string name="grade_l">יב</string>
</resources>
